# assignment-tftp-server-and-client-part1-public

./: CMakeLists.txt  README.md  TftpClient.cpp  TftpCommon.cpp  TftpConstant.h  TftpError.h  TftpOpcode.h  TftpServer.cpp
.github/workflows/: TestCommon.sh  TestLargeFiles.sh  TestSmallFiles.sh  auto-grade.yml  check_no_change.sh
.github/workflows/client-files/: client-large.txt  client-to-server-large-512.txt  client-to-server-large.txt  client-to-server-medium-512.txt  client-to-server-medium.txt  client-to-server-small-512.txt  client-to-server-small.txt  sample1.txt
.github/workflows/server-files/: sample2.txt  server-large.txt  server-to-client-large-512.txt  server-to-client-large.txt  server-to-client-medium-512.txt  server-to-client-medium.txt  server-to-client-small-512.txt  server-to-client-small.txt
